[package]
name = "utree"
version = "0.1.0"
edition = "2021"
authors = ["Vladyslav Nikonov <mail@pacmancoder.xyz>"]
description = "μTree - produce your tree-like structures (HTML, XML, etc.) with ease. Inspired by Emmet"

[dependencies]
strum = { version = "0.23", features = ["derive"] }
thiserror = "1.0"
pest = "2.1"
pest_derive = "2.1"
from_variants = "0.6"

[dev-dependencies]
expect-test = "1.1"
